--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,19 +1,21 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>
-    {% block title %}Log In{% endblock %}
-  </h1>
+    <h1>
+        {% block title %}
+            Log In
+        {% endblock %}
+    </h1>
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required/>
+    <form method="post">
+        <label for="username">Username</label>
+        <input name="username" id="username" required />
 
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required/>
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" required />
 
-    <input type="submit" value="Log In"/>
-  </form>
+        <input type="submit" value="Log In" />
+    </form>
 {% endblock %}
